test/files/neg/t8463.check
t8463.scala:5: error: type mismatch;
 found   : Test.Foo[Any]
 required: Test.Foo[Test.Cell]
  insertCell(Foo(5))
                ^
one error found